--- a/settings.json
+++ b/settings.json
@@ -15,7 +15,8 @@
     "statusBar.background": "#000000",
     "statusBar.noFolderBackground": "#000000",
     "statusBar.debuggingBackground": "#000000",
-    "editor.background": "#dfdfdf",
+    // "editor.background": "#dfdfdf",
+    "editor.background": "#cfcece",
     "editor.selectionBackground": "#01d08f3c",
     "statusBar.debuggingForeground": "#ffffff"
   },
