--- a/settings.json
+++ b/settings.json
@@ -426,6 +426,14 @@
     {
       "before": ["v", "f"],
       "after": ["v", "$"]
+    },
+    {
+      "before": ["v", "z"],
+      "commands": [
+        {
+          "command": "cursorEndSelect"
+        }
+      ]
     }
   ],
   "workbench.iconTheme": "icons",
